--- a/info/task_description.html
+++ b/info/task_description.html
@@ -43,11 +43,11 @@
 
 <!-- Here you can explain how it can be used in development -->
 <!-- The section is optional -->
-<p class="for_info_only">
+<!-- <p class="for_info_only">
 
     <strong>How it’s used:</strong>
     <i>This technique of using for-loops to fill out the memoization tables instead of using a recursive formula is called dynamic programming.</i>
-</p>
+</p> -->
 
 <!-- Here you can explain some constraints for input-->
 <!-- The section is optional -->
