--- a/translations/fr/info/task_description.html
+++ b/translations/fr/info/task_description.html
@@ -1,5 +1,7 @@
 <!-- Describe task in general -->
 
+<img src="{{MEDIA_CONVERT}}title.png" class="title_img" />
+
 <p style="text-align: justify;">
     Vous vous trouvez au point <b>(x, y)</b> de la <i>grille</i> de paires de nombres non négatifs et vous souhaitez vous rendre au point d'origine <b>(0, 0)</b>. À tout moment, vous êtes autorisé à vous déplacer d'un pas vers la gauche ou d'un pas vers le bas. En outre, vous n'êtes jamais autorisé à entrer dans l'un des points de la liste <b>tabu</b> (l'origine n'est jamais dans <b>tabu</b>). Cette fonction doit additionner le nombre de chemins différents qui mènent du point <b>(x,y)</b> à l'origine <b>(0,0)</b> sous ces contraintes. 
 </p>
