--- a/translations/pl/info/task_description.html
+++ b/translations/pl/info/task_description.html
@@ -1,5 +1,7 @@
 <!-- Describe task in general -->
 
+<img src="{{MEDIA_CONVERT}}title.png" class="title_img" />
+
 <p style="text-align: justify;">
     Stoi Pan(i) w punkcie <b>(x, y)</b> w <i>siatce</i> par liczb nieujemnych i chce Pan(i) dotrzeć do punktu początkowego <b>(0, 0)</b>. W każdym punkcie może Pan/Pani wykonać jeden krok w lewo lub jeden krok w dół. Co więcej, nigdy nie można przejść do żadnego z punktów na liście <b>tabu</b> (punkt początkowy nigdy nie znajduje się w <b>tabu</b>). Ta funkcja powinna zsumować liczbę różnych ścieżek, które prowadzą z punktu <b>(x,y)</b> do punktu początkowego <b>(0,0)</b> przy tych ograniczeniach. 
 </p>
