--- a/translations/uk/info/task_description.html
+++ b/translations/uk/info/task_description.html
@@ -1,5 +1,7 @@
 <!-- Describe task in general -->
 
+<img src="{{MEDIA_CONVERT}}title.png" class="title_img" />
+
 <p style="text-align: justify;">
     Ви стоїте у точці <b>(x, y)</b> на <i>решітці</i> з пар невід'ємних чисел і хочете дістатись до початкової точки <b>(0, 0)</b>. У довільний момент вам дозволено зробити один крок ліворуч або один крок вниз. Крім того, вам ніколи не дозволяється вступати у жодну з точок списку <b>tabu</b> (початок координат ніколи не знаходиться у точці <b>tabu</b>). Ця функція повинна підрахувати кількість різних шляхів, які ведуть з точки <b>(x,y)</b> в початок координат <b>(0,0)</b> при цих обмеженнях. 
 </p>
