--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,5 +1,7 @@
 <!-- Describe task in general -->
 
+<img src="{{MEDIA_CONVERT}}title.png" class="title_img" />
+
 <p style="text-align: justify;">
     You are standing at the point <b>(x, y)</b> in the <i>lattice</i> grid of pairs of non-negative numbers, and wish to make your way to the origin point <b>(0, 0)</b>. At any point, you are allowed to move either one step left or one step down. Furthermore, you are never allowed to step into any of the points in the <b>tabu</b> list (origin is never in <b>tabu</b>). This function should add up the number of different paths that lead from the point <b>(x,y)</b> to the origin <b>(0,0)</b> under these constraints. 
 </p>
